# vlmhyperbench_playground

./: .gitignore  .gitmodules  README.md  check_classification.py  config_classification.json  docker-compose.yaml  model_config.json  package-lock.json  pyproject.toml  run_structure_out_invoice.py  run_structure_out_invoice_with_metrics.py  run_structure_out_invoice_with_metrics_vllm.py  run_vqa_structure_out_invoice.py  run_vqa_structure_out_invoice_with_metrics.py
.kilocode/rules/: development.md  project.md
data/snils/jsons/: 0.json  1.json
docker/: Dockerfile-plantuml  Dockerfile-uv  render_plantuml.py
docs/: plantuml-docker-renderer.md  pre-commit-uv-ruff-guide.md  upgrade_to_uv_0.8.2.md  vLLM v0.9.2 SamplingParams guided_json vs guided_d.md  vllm_qwen25vl_max_pixels.md
docs/architecture/: VLMHyperBench.md  model_interface_design.md  optionality_of_each_stage_in_the_Task.puml  plantuml-best-practices.md  test.md
docs/architecture/diagrams/: VLMHyperBench_containers.puml  VLMHyperBench_context.puml  VLMHyperBench_data_detail.puml  VLMHyperBench_detailed_sequence.puml  VLMHyperBench_isolated_envs.puml  VLMHyperBench_single_task_detail.puml  VLMHyperBench_task_concept.puml  model_interface.puml
docs/docs_new/: 01_architecture_concept.md  09_architecture_decision_records.md  10_comparative_analysis.md
docs/docs_reference/: planned-document-fields.md
docs/metrics/: invoice_extraction_metrics.md
docs/troubleshooting/: git_submodules_move.md  git_submodules_status.md
plans/: abstraction_strategy.md  api_wrapper_feasibility_analysis.md  architecture_design.md  architecture_vlm_eval_v2.md  data_access_strategy_analysis.md  evalscope_architecture_research.md  final_architecture_specification.md  metric_backend_analysis.md  metric_backend_support.md  performance_metrics_strategy.md  plantuml_docker_renderer_plan.md  plantuml_docker_renderer_tool_context.md  research_report.md  session_handover_v020.md  task_01_prompt_manager.md  task_02_api_wrapper.md  task_03_deepseek_adapter.md  task_04_async_inference.md  task_05_management_backend.md  task_06_web_ui.md  task_07_data_layer.md  task_08_metric_evaluator.md  task_09_reporting_engine.md  task_10_orchestrator_refactor.md  task_11_task_registry.md  task_12_component_placement.md  task_13_dependency_injection.md  task_14_dataset_iterator_refactor.md  task_15_dynamic_plugin_system.md  task_16_registry_schema_design.md  task_17_testing_strategy.md  task_status.md  v0.2.0_implementation_plan.md  vlm_evaluation_best_practices.md  vlm_integration_research.md
reports/: report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_20250620_235419.md
services/management_backend/: Dockerfile  README.md  pyproject.toml
services/management_backend/src/management_backend/: database.py  event_bus.py  main.py  models.py  schemas.py
services/orchestrator_service/: README.md  pyproject.toml
services/orchestrator_service/src/orchestrator_service/: main.py
services/web_ui/: nginx.conf  package-lock.json  package.json  tailwind.config.js
services/web_ui/src/: App.tsx  index.css
src/vlm_hyperbench/: __init__.py
tmp_model_eval/: check_classifiication.md  check_classifiication.py  check_entity_extractor.py  check_page_sorting.md  check_page_sorting.py  config_classification.json  config_page_sorting.json  config_prompt_optimization.json  config_test_model.json  document_classes.py  optimize_prompt.py  report_classifiication.py  strctured_output.py  test_model.py
tools/: limited_tree.md  limited_tree.py
tools/release_tool/: .gitignore  README.md  __init__.py  pyproject.toml  release_tool.toml
tools/release_tool/ci/: release_flow.yml
tools/release_tool/core/: __init__.py  config.py  git.py  git_helpers.py  git_utils.py  packages.py  status_analyzer.py  utils.py
tools/release_tool/examples/: tags_map.example.json
tools/release_tool/plans/: realise_tool_refactornig.md
tools/release_tool/stages/: __init__.py  clear.py  stage0.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py
vlmhyperbench/data_dirs/PromptCollections/snils_extraction/: default.json
vlmhyperbench/registries/datasets/: snils_mini.yaml
vlmhyperbench/registries/metrics/: field_accuracy.yaml  structural_fidelity.yaml
vlmhyperbench/registries/runs/: qwen_snils_extraction.yaml
vlmhyperbench/registries/tasks/: snils_extraction.yaml
