[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10, !=3.11.*, <3.13"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
    "hello-world",
    "tabulate>=0.9.0",
    "packaging>=23.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "jiwer>=4.0.0",
]

[tool.uv.sources]
bench-utils = { workspace = true }
model-interface = { workspace = true }
model-qwen2-5-vl = { workspace = true }
prompt-handler = { workspace = true }
print-utils = { workspace = true }
hello-world = { workspace = true }
release-tool = { path = "tools/release_tool" }

# источники PyTorch/torchvision для разных backend-экстра
torch = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[tool.uv.workspace]
# все пакеты, лежащие в каталогах packages/* (каждый должен содержать собственный pyproject.toml)
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm_hyperbench"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "E402"]

[project.optional-dependencies]
# оставляем только extras для публикации (если нужны)
cu124 = ["torch>=2.4,<2.8", "torchvision>=0.19,<0.23"]
cu128 = ["torch>=2.4,<2.8", "torchvision>=0.19,<0.23"]

[dependency-groups]
dev = [
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
    "mypy>=1.9",
    "release-tool",
    "mdformat>=0.7.22",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
ignore_missing_imports = true
# Suppress noisy codes for tomlkit etc. Remove gradually after refactor.
disable_error_code = [
    "call-overload",
    "index",
    "operator",
    "union-attr",
    "assignment",
    "no-any-return",
    "unused-ignore",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = [
  "sys_platform == 'linux' and python_version >= '3.10' and python_version < '3.11'",
  "sys_platform == 'linux' and python_version >= '3.12' and python_version < '3.13'",
]
conflicts = [[{ extra = "cu124" }, { extra = "cu128" }]]
