[project]
name = "vlm-hyperbench"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "bench-utils",
    "tabulate>=0.9.0",
    "packaging>=23.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.6",
]

[tool.uv]
package = false
environments = [
  "sys_platform == 'linux' and python_version >= '3.13'",
]

[tool.uv.sources]
release-tool = { path = "release_tool" }

[build-system]
requires = ["uv_build>=0.9.26"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "E402"]

[dependency-groups]
dev = [
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
    "mypy>=1.9",
    "mdformat>=0.7.22",
    "pytest>=9.0.2",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
ignore_missing_imports = true
# Suppress noisy codes for tomlkit etc. Remove gradually after refactor.
disable_error_code = [
    "call-overload",
    "index",
    "operator",
    "union-attr",
    "assignment",
    "no-any-return",
    "unused-ignore",
]

