[project]
name = "management-backend"
version = "0.1.0"
description = "VLMHyperBench Management Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.22",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "task-registry",
]

[tool.uv.sources]
task-registry = { path = "../../packages/task-registry", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true